# vpp-plugin-rs

./: .gitignore  Cargo.toml  README.md
.github/workflows/: ci.yml
patches/vpp-25.02/: 0001-buffers-fix-allocation-alignment-of-vm-buffer_main.patch  0002-vnet-correct-alignment-of-ip4-ip6_header_t.patch  0003-vnet-link-against-vlibapi-vlibmemory.patch  0004-vlibapi-link-against-vppinfra-and-svm.patch
patches/vpp-25.10/: 0001-buffers-fix-allocation-alignment-of-vm-buffer_main.patch  0002-vnet-correct-alignment-of-ip4-ip6_header_t.patch  0003-vnet-link-against-vlibapi-vlibmemory.patch  0004-vlibapi-link-against-vppinfra-and-svm.patch
tests/: config.py  debug.py  framework.py  requirements.txt  run  run_tests.py  test_example.py  vpp_papi_provider.py  vpp_pg_interface.py
tests/asf/: asfframework.py
vpp-example-plugin/: Cargo.toml  build.rs  example.api
vpp-example-plugin/src/: lib.rs
vpp-plugin/: Cargo.toml  build.rs  vlib_wrapper.c  vlib_wrapper.h
vpp-plugin-api-gen/: Cargo.toml  README.md
vpp-plugin-api-gen/src/: json.rs  lib.rs  parser.rs
vpp-plugin-api-gen/tests/: explicit_get_service_required_details.api  missing_caller_message_for_reply.api  missing_details_message_for_dump.api  missing_dump_get_message_for_details.api  missing_reply_message_for_message.api  sanity.api  sanity.api.json  service_caller_used_as_reply.api  service_refers_undefined_event.api  service_refers_undefined_message.api  service_refers_undefined_message_reply.api  string_not_array.api  type_redefinition_error.api  type_resolution_error.api  vla_field_not_found.api  vla_field_not_last.api  vla_field_not_last_string_typedef.api  vla_field_not_last_typedef_block.api  vla_field_not_last_typedef_block2.api  vla_field_union.api  vla_typedef.api
vpp-plugin-macros/: Cargo.toml
vpp-plugin-macros/src/: lib.rs
vpp-plugin/src/: bindings.rs  lib.rs  macro_support.rs
vpp-plugin/src/bindings/: x86_64-unknown-linux-gnu.rs
vpp-plugin/src/vlib/: buffer.rs  cli.rs  main.rs  mod.rs  node.rs  node_generic.rs
vpp-plugin/src/vlibapi/: mod.rs
vpp-plugin/src/vnet/: buffer.rs  error.rs  feature.rs  mod.rs  types.rs
vpp-plugin/src/vppinfra/: cache.rs  error.rs  mod.rs  unformat.rs  vec.rs
